Fix search close icon hover alignment and SendFox code block parsing

--- a/_sass/3-modules/_search.scss
+++ b/_sass/3-modules/_search.scss
@@ -37,11 +37,15 @@
     font-size: 30px;
     line-height: 1;
     color: $dark;
-    transition: all .25s;
+    transition: color .25s;
     cursor: pointer;
     &:hover {
-      transform: rotate(90deg);
-      color: color.adjust($dark, $lightness: -15%);
+      color: $brand-color;
+    }
+
+    ion-icon {
+      position: relative;
+      top: -2px;
     }
   }
 
